local_development/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lmyc-backend-deployment
  labels:
    app: lmyc-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lmyc-backend-container
  template:
    metadata:
      labels:
        app: lmyc-backend-container
    spec:
      containers:
        - image: public.ecr.aws/m2q6z9r8/lmyc-testing:latest
          name: backend
          ports:
            - containerPort: 8000
