local_development/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmyc-backend-service
  labels:
    app: lmyc-backend-service
spec:
  type: NodePort
  selector:
    app: lmyc-backend-container
  ports:
    - port: 8000
      targetPort: 8000
