local_development/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lmyc-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lmyc-backend-service
                port:   
                  number: 8000
